---
source: src/expr/src/scalar/func/macros.rs
expression: "#[sqlfunc()]\nfn infallible2(a: Option<f32>) -> f32 {\n    a.unwrap_or_default()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Infallible2;
impl crate::func::EagerUnaryFunc for Infallible2 {
    type Input<'a> = Option<f32>;
    type Output<'a> = f32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        infallible2(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Infallible2 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(infallible2))
    }
}
fn infallible2(a: Option<f32>) -> f32 {
    a.unwrap_or_default()
}
